--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1622,7 +1622,7 @@
 	}
 
 	body {
-		background: #312450;
+		background: #2692D0;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
